# yt-transcript

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bbad.txt  install.sh  pyproject.toml  transcript.txt
yt_transcript/: cli.py
