[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript"
version = "0.5.2"
description = "Turn a YouTube video into a clean text transcript via captions or Whisper."
requires-python = ">=3.9"
authors = [{ name = "plc" }]

[project.scripts]
yt-transcript = "yt_transcript.cli:main"

[tool.setuptools.packages.find]
include = ["yt_transcript*"]
